--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <header>
         <nav>
             <div>
-                <img src="/yahoo.png" height="35px">
+                <img src="yahoo.png" height="35px">
             </div>
             <div class="left">
                 <a href="#"> <span class="material-symbols-outlined">
